--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -3,14 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- IMPORTANT: Tells the browser/WebView that this page supports both light and dark modes natively -->
+    <meta name="color-scheme" content="light dark">
+
     <title>Aviation Weather Report (TAF & METAR)</title>
+
+    <!-- 1. DEFINE CONFIG BEFORE LOADING TAILWIND -->
+    <script>
+        // We use 'class' strategy so we can manually force the class via JS detection below.
+        // This is often more robust in WebViews than relying on 'media' auto-detection.
+        window.tailwind = {
+            config: {
+                darkMode: 'class',
+            }
+        }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- 2. JS THEME DETECTION FALLBACK -->
+    <script>
+        // Immediately check system preference and apply 'dark' class to <html/>
+        function applyTheme() {
+            // Check if system is dark
+            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.documentElement.classList.add('dark');
+            } else {
+                document.documentElement.classList.remove('dark');
+            }
+        }
+
+        // Run immediately
+        applyTheme();
+
+        // Listen for changes (e.g. toggling dark mode in quick settings while app is open)
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', applyTheme);
+    </script>
+
     <!-- We keep jsPDF for the PDF option -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
 
     <!-- Flatpickr for enforced 24h UTC inputs -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <!-- Load Flatpickr Dark Theme ONLY if device is in Dark Mode (CSS Media Query) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/dark.css" media="(prefers-color-scheme: dark)">
+
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -89,7 +126,7 @@
 
 <div class="container mx-auto p-4 md:p-8 max-w-5xl pt-8 mt-4"> <!-- Added top padding/margin to account for banner if present -->
     <header class="mb-8 text-center">
-        <h1 class="text-3xl font-bold text-blue-600 dark:text-blue-400">Aviation Weather Generator</h1>
+        <h1 class="text-3xl font-bold text-blue-600 dark:text-blue-400">Aviation Weather Report</h1>
         <p class="text-gray-600 dark:text-gray-400 mt-2">
             Generates a report of current METARs and TAFs, view in-app or download as PDF.
         </p>
@@ -229,7 +266,7 @@
 <script>
     // --- APP UPDATE CONFIGURATION ---
     // IMPORTANT: Update this constant when releasing a new version!
-    const CURRENT_VERSION = 'v1.3.4';
+    const CURRENT_VERSION = 'v1.3.5';
     const GITHUB_REPO = 'Unpiloted0852/AvWx';
 
     // --- LIBRARIES ---
@@ -306,25 +343,40 @@
 
     function initializeTimeInputs() {
         const now = new Date();
-        const takeoffDefault = new Date(now.getTime() + 60 * 60 * 1000);
-        const landingDefault = new Date(now.getTime() + 3 * 60 * 60 * 1000);
+
+        // 1. Calculate Takeoff: 1 hour in future, rounded up to the nearest hour
+        // Start by adding 1 hour to current time
+        let takeoffTime = new Date(now.getTime() + 60 * 60 * 1000);
+
+        // If minutes are not 0, round up to the next hour
+        if (takeoffTime.getUTCMinutes() > 0) {
+            takeoffTime.setUTCHours(takeoffTime.getUTCHours() + 1);
+            takeoffTime.setUTCMinutes(0);
+        }
+        // Zero out seconds to be clean
+        takeoffTime.setUTCSeconds(0);
+        takeoffTime.setUTCMilliseconds(0);
+
+        // 2. Calculate Landing: 7 hours after the calculated Takeoff
+        const landingTime = new Date(takeoffTime.getTime() + 7 * 60 * 60 * 1000);
 
         const commonConfig = {
             enableTime: true,
             dateFormat: "Y-m-d H:i",
             time_24hr: true,
+            disableMobile: true, // CRITICAL: Forces Flatpickr's custom picker on mobile, ensuring 24h format
             minuteIncrement: 1,
             static: true
         };
 
         flatpickr("#takeOffTime", {
             ...commonConfig,
-            defaultDate: formatUtcForInput(takeoffDefault)
+            defaultDate: formatUtcForInput(takeoffTime)
         });
 
         flatpickr("#landingTime", {
             ...commonConfig,
-            defaultDate: formatUtcForInput(landingDefault)
+            defaultDate: formatUtcForInput(landingTime)
         });
     }
     initializeTimeInputs();
